--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </p>
 
         <div class="flex flex-wrap gap-3">
-          <a href="#contacto"
+          <a href="#sumate"
              class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
             QUIERO SUMARME
           </a>
@@ -127,13 +127,13 @@
   <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
   <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-2">
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
     <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
       SISTEMA C.U.R.A.
     </p>
 
     <p class="text-sm text-white">
-     Una credencial única y segura que unifica toda la información médica de cada persona. La Historia Clínica acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país.
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
     </p>
 
     <p class="text-sm text-white">
@@ -336,13 +336,41 @@
     <div class="grid md:grid-cols-2 gap-3">
       <div>
         <label class="block text-xs font-medium text-red-400 mb-1">Provincia *</label>
-        <input name="provincia" required
-               class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
+        <select name="provincia" required
+                class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary bg-white text-cura-primary">
+          <option value="">Seleccioná una provincia</option>
+          <option value="Buenos Aires">Buenos Aires</option>
+          <option value="Ciudad Autónoma de Buenos Aires">Ciudad Autónoma de Buenos Aires</option>
+          <option value="Catamarca">Catamarca</option>
+          <option value="Chaco">Chaco</option>
+          <option value="Chubut">Chubut</option>
+          <option value="Córdoba">Córdoba</option>
+          <option value="Corrientes">Corrientes</option>
+          <option value="Entre Ríos">Entre Ríos</option>
+          <option value="Formosa">Formosa</option>
+          <option value="Jujuy">Jujuy</option>
+          <option value="La Pampa">La Pampa</option>
+          <option value="La Rioja">La Rioja</option>
+          <option value="Mendoza">Mendoza</option>
+          <option value="Misiones">Misiones</option>
+          <option value="Neuquén">Neuquén</option>
+          <option value="Río Negro">Río Negro</option>
+          <option value="Salta">Salta</option>
+          <option value="San Juan">San Juan</option>
+          <option value="San Luis">San Luis</option>
+          <option value="Santa Cruz">Santa Cruz</option>
+          <option value="Santa Fe">Santa Fe</option>
+          <option value="Santiago del Estero">Santiago del Estero</option>
+          <option value="Tierra del Fuego, Antártida e Islas del Atlántico Sur">Tierra del Fuego, Antártida e Islas del Atlántico Sur</option>
+          <option value="Tucumán">Tucumán</option>
+        </select>
       </div>
       <div>
         <label class="block text-xs font-medium text-red-400 mb-1">Ciudad *</label>
-        <input name="ciudad" required
-               class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
+        <select name="ciudad" id="ciudad-select" required
+                class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary bg-white text-cura-primary">
+          <option value="">Seleccioná una ciudad</option>
+        </select>
       </div>
     </div>
 
@@ -355,6 +383,12 @@
     <div>
       <label class="block text-xs font-medium text-cura-accentLight mb-1">DNI (opcional)</label>
       <input name="dni"
+             class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
+    </div>
+
+    <div>
+      <label class="block text-xs font-medium text-cura-accentLight mb-1">Número de teléfono (opcional)</label>
+      <input name="telefono"
              class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
     </div>
 
@@ -638,6 +672,67 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 </script>
 
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const sumateLink = document.querySelector('a[href="#sumate"]');
+  if (sumateLink) {
+    sumateLink.addEventListener('click', function (e) {
+      e.preventDefault();
+      const target = document.getElementById('sumate');
+      if (target) {
+        target.scrollIntoView({ behavior: 'smooth' });
+      }
+    });
+  }
+});
+</script>
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const provinciaSelect = document.querySelector('select[name="provincia"]');
+  const ciudadSelect = document.getElementById('ciudad-select');
+
+  async function cargarCiudades() {
+    if (!provinciaSelect || !ciudadSelect) return;
+    const prov = provinciaSelect.value;
+    ciudadSelect.innerHTML = '<option value="">Cargando ciudades...</option>';
+    if (!prov) {
+      ciudadSelect.innerHTML = '<option value="">Seleccioná una ciudad</option>';
+      return;
+    }
+    try {
+      const url = 'https://apis.datos.gob.ar/georef/api/localidades?campos=nombre&max=5000&provincia=' + encodeURIComponent(prov);
+      const res = await fetch(url);
+      if (!res.ok) throw new Error();
+      const data = await res.json();
+      const localidades = (data.localidades || []).map(l => l.nombre).sort((a,b)=>a.localeCompare(b,'es'));
+      ciudadSelect.innerHTML = '<option value="">Seleccioná una ciudad</option>';
+      localidades.forEach(nombre => {
+        const opt = document.createElement('option');
+        opt.value = nombre;
+        opt.textContent = nombre;
+        ciudadSelect.appendChild(opt);
+      });
+    } catch (e) {
+      ciudadSelect.innerHTML = '<option value="">No se pudieron cargar las ciudades</option>';
+    }
+  }
+
+  if (provinciaSelect) {
+    provinciaSelect.addEventListener('change', cargarCiudades);
+  }
+
+  const sumateLink = document.querySelector('a[href="#sumate"]');
+  if (sumateLink) {
+    sumateLink.addEventListener('click', function (e) {
+      e.preventDefault();
+      const target = document.getElementById('sumate');
+      if (target) target.scrollIntoView({ behavior: 'smooth' });
+    });
+  }
+});
+</script>
 </body>
 
 </html>
