--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@
         </p>
 
         <div class="flex flex-wrap gap-3">
-    <a id="btn-sumate"
-   class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
-  QUIERO SUMARME
-</a>
-
+          <button id="btn-sumate" type="button"
+             class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition cursor-pointer">
+            QUIERO SUMARME
+          </button>
           <a href="#informacion"
              class="inline-flex items-center justify-center px-4 py-2.5 rounded-full border border-cura-accent text-sm font-semibold text-cura-accentLight hover:bg-cura-accent hover:text-cura-primary transition">
             Obtén más información
@@ -128,13 +127,13 @@
   <div class="absolute -top-6 -right-4 w-28 h-28 rounded-full bg-cura-accent/25 blur-2xl"></div>
   <div class="absolute -bottom-8 -left-4 w-28 h-28 rounded-full bg-cura-primaryDark/50 blur-2xl"></div>
 
-  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-2">
+  <div class="relative bg-cura-card border border-cura-accent/40 rounded-2xl shadow-xl p-5 space-y-4">
     <p class="text-xs font-semibold text-cura-accentLight uppercase tracking-wide">
       SISTEMA C.U.R.A.
     </p>
 
     <p class="text-sm text-white">
-      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país.
+      Una credencial digital única y segura que unifica toda la información médica de cada persona. La Historia Clínica deja de estar dispersa: acompaña al paciente a cualquier lugar, en cualquier momento y en cualquier institución del país. Fin del papeleo, los trámites repetidos, los estudios duplicados y la burocracia que frena la atención.
     </p>
 
     <p class="text-sm text-white">
@@ -430,9 +429,6 @@
           <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
             Esta iniciativa no solicita aportes económicos. Tu apoyo se basa en informarte, difundir y acompañar el proceso.
           </div>
-            <div class="bg-cura-primaryDark border border-cura-accent/30 rounded-lg p-3 text-xs text-cura-accentLight">
-           Te necesitamos para hacer historia, solo con tu firma es que vamos a poder avanzar con el proyecto, sumate.
-          </div>
         </div>
 
         <!-- Formulario (estático) -->
@@ -685,47 +681,13 @@ document.addEventListener('DOMContentLoaded', function () {
       e.preventDefault();
       const target = document.getElementById('sumate');
       if (target) {
-       function smoothScrollTo(element, duration = 900) {
-  const targetY = element.getBoundingClientRect().top + window.pageYOffset - 20;
-  const startY = window.pageYOffset;
-  const diff = targetY - startY;
-  let start;
-
-  function step(timestamp) {
-    if (!start) start = timestamp;
-    const time = timestamp - start;
-    const percent = Math.min(time / duration, 1);
-
-    // easeOutCubic = suave al inicio y más lento al final
-    const easing = 1 - Math.pow(1 - percent, 3);
-
-    window.scrollTo(0, startY + diff * easing);
-
-    if (time < duration) {
-      requestAnimationFrame(step);
-    }
-  }
-
-  requestAnimationFrame(step);
-}
-
-const sumateLink = document.querySelector('a[href="#sumate"]');
-if (sumateLink) {
-  sumateLink.addEventListener('click', function (e) {
-    e.preventDefault();
-    const target = document.getElementById('sumate');
-    if (target) {
-      smoothScrollTo(target, 1200); // duración 1.2s — MUY SUAVE
-    }
-  });
-}
-
-
+        target.scrollIntoView({ behavior: 'smooth' });
       }
     });
   }
 });
 </script>
+
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
@@ -745,7 +707,7 @@ document.addEventListener('DOMContentLoaded', function () {
       const res = await fetch(url);
       if (!res.ok) throw new Error();
       const data = await res.json();
-      const localidades = (data.localidades || []).map(l => l.nombre).sort((a,b)=>a.localeCompare(b,'es'));
+      const localidades = (data.localidades || []).map(l => l.nombre).sort((a, b) => a.localeCompare(b, 'es'));
       ciudadSelect.innerHTML = '<option value="">Seleccioná una ciudad</option>';
       localidades.forEach(nombre => {
         const opt = document.createElement('option');
@@ -762,16 +724,38 @@ document.addEventListener('DOMContentLoaded', function () {
     provinciaSelect.addEventListener('change', cargarCiudades);
   }
 
-  const sumateLink = document.querySelector('a[href="#sumate"]');
-  if (sumateLink) {
-    sumateLink.addEventListener('click', function (e) {
+  const btn = document.getElementById('btn-sumate');
+  const target = document.getElementById('sumate');
+
+  function smoothScrollTo(element, duration = 1200) {
+    const targetY = element.getBoundingClientRect().top + window.pageYOffset - 20;
+    const startY = window.pageYOffset;
+    const distance = targetY - startY;
+    let startTime = null;
+
+    function animation(currentTime) {
+      if (!startTime) startTime = currentTime;
+      const timeElapsed = currentTime - startTime;
+      const progress = Math.min(timeElapsed / duration, 1);
+      const ease = 1 - Math.pow(1 - progress, 3); // easeOutCubic
+      window.scrollTo(0, startY + distance * ease);
+      if (timeElapsed < duration) {
+        requestAnimationFrame(animation);
+      }
+    }
+
+    requestAnimationFrame(animation);
+  }
+
+  if (btn && target) {
+    btn.addEventListener('click', function (e) {
       e.preventDefault();
-      const target = document.getElementById('sumate');
-      if (target) target.scrollIntoView({ behavior: 'smooth' });
+      smoothScrollTo(target, 1200);
     });
   }
 });
 </script>
+
 </body>
 
 </html>
