--- a/menu.html
+++ b/menu.html
@@ -8,14 +8,19 @@
     :root {
       --main-bg: #f0f4f8; 
       --blue-header: #005fa3; 
+      /* Colores Credencial Celeste */
       --cred-bg-start: #a6ccee;
       --cred-bg-end: #cce5ff;
+      --btn-ver-bg: #e3f0ff;
+      --btn-ver-text: #005fa3;
+      
       --text-dark: #0d2b52;
       --text-gray: #64748b;
       --card-white: #ffffff;
       --icon-circle-start: #dbeafe;
       --icon-circle-end: #bfdbfe;
       --menu-text-blue: #0d2b52; 
+      --shadow-soft: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
 
     * {
@@ -41,7 +46,7 @@
       padding-bottom: 110px; 
     }
 
-    /* Header Estilo Pastilla */
+    /* --- HEADER PASTILLA --- */
     .header-bar {
       background-color: var(--blue-header);
       width: calc(100% - 40px);
@@ -57,17 +62,16 @@
 
     .header-title { color: #ffffff; font-size: 18px; font-weight: 700; }
 
-    /* Saludo */
+    /* --- CONTENIDO --- */
     .main-content { padding: 10px 20px; flex: 1; }
     .greeting-text { font-size: 28px; font-weight: 800; color: var(--text-dark); margin-bottom: 4px; }
     .greeting-sub { font-size: 16px; color: var(--text-gray); margin-bottom: 24px; }
 
-      /* --- 2. CREDENCIAL CELESTE (Estilo Imagen 10) --- */
+    /* --- CREDENCIAL CELESTE (RESTAURADA) --- */
     .credencial-card-light {
         display: block;
         text-decoration: none;
         width: 100%;
-        /* Gradiente celeste claro */
         background: linear-gradient(135deg, var(--cred-bg-start), var(--cred-bg-end));
         border-radius: 24px;
         padding: 24px 20px;
@@ -77,9 +81,7 @@
         transition: transform 0.1s ease-out;
     }
 
-    .credencial-card-light:active {
-        transform: scale(0.98);
-    }
+    .credencial-card-light:active { transform: scale(0.98); }
 
     .cred-title-light {
         font-size: 16px;
@@ -117,13 +119,8 @@
         font-weight: 700;
         color: var(--text-dark);
         margin-bottom: 4px;
-        margin-top: 0;
     }
-    .user-data-light p {
-        font-size: 14px;
-        color: var(--text-gray);
-        margin: 0;
-    }
+    .user-data-light p { font-size: 14px; color: var(--text-gray); }
 
     .cred-right-actions {
         display: flex;
@@ -132,10 +129,9 @@
         gap: 12px;
     }
 
-/* Busca la clase .qr-box-light y agrega el estilo para la imagen img */
     .qr-box-light {
         background: rgba(255,255,255,0.6);
-        padding: 5px; /* Un poco menos de padding para que el QR sea más grande */
+        padding: 5px;
         border-radius: 12px;
         width: 70px;
         height: 70px;
@@ -144,15 +140,12 @@
         justify-content: center;
     }
 
-    /* ESTO ES LO NUEVO: Para que tu imagen PNG se vea bien */
     .qr-box-light img {
         width: 100%;
         height: 100%;
-        object-fit: contain; /* Esto evita que el QR se corte o estire */
+        object-fit: contain;
         display: block;
     }
-    /* Placeholder visual para el QR */
-    .qr-svg-placeholder { width: 100%; height: 100%; fill: #4a5568; opacity: 0.7; }
 
     .btn-ver-light {
         background-color: var(--btn-ver-bg);
@@ -164,18 +157,17 @@
         border: none;
     }
 
-
-    /* --- GRID CORREGIDO --- */
+    /* --- GRID MENÚ (ORIGINAL MENU 10) --- */
     .menu-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
-      gap: 12px; /* Espacio reducido para evitar el desfase */
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
     }
 
     .menu-item {
       background: var(--card-white);
       border-radius: 24px;
-      padding: 15px 5px; /* Ajustado para que quepa el contenido */
+      padding: 15px 5px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -183,7 +175,6 @@
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.04);
     }
 
-    /* Círculo ajustado a 80px para que quepan 3 por fila en móviles estándar */
     .icon-circle {
       width: 80px; 
       height: 80px;
@@ -202,18 +193,18 @@
     }
 
     .menu-text {
-      font-size: 11px; /* Tamaño optimizado para 3 columnas */
+      font-size: 11px;
       font-weight: 800;
       color: var(--menu-text-blue);
       text-align: center;
       line-height: 1.2;
-      height: 2.4em; /* Mantiene la alineación si el texto tiene 2 líneas */
+      height: 2.4em;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
-    /* Nav Inferior */
+    /* --- NAV INFERIOR (ORIGINAL MENU 10) --- */
     .bottom-bar {
       position: fixed;
       bottom: 20px;
@@ -260,20 +251,24 @@
       <h1 class="greeting-text">Hola, Franco 👋</h1>
       <p class="greeting-sub">¿Qué necesitas hoy?</p>
 
-      <a href="#" class="credencial-card">
-        <p class="cred-title">Credencial Digital</p>
+      <a href="credencial.html" class="credencial-card-light">
+        <div class="cred-title-light">Credencial Digital</div>
         <div class="cred-layout">
-          <div class="cred-user">
-            <div class="avatar"></div>
-            <div>
-              <p class="user-name">Franco Paganini</p>
-              <p class="user-id">CURAID-01-41316202</p>
+            <div class="cred-left-info">
+                <div class="avatar-placeholder">
+                    <svg viewBox="0 0 24 24"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
+                </div>
+                <div class="user-data-light">
+                    <h3>Franco Paganini</h3>
+                    <p>CURAID-01-41316202</p>
+                </div>
             </div>
-          </div>
-          <div class="qr-side">
-            <div class="qr-box"><img src="qr_menu.png" alt="QR"></div>
-            <button class="btn-ver">Ver credencial</button>
-          </div>
+            <div class="cred-right-actions">
+                <div class="qr-box-light">
+                    <img src="qr_menu.png" alt="QR Código" />
+                </div>
+                <button class="btn-ver-light">Ver credencial</button>
+            </div>
         </div>
       </a>
 
