--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
       font-family: 'Open Sans', sans-serif; font-weight: 400; font-size: 2.8cqw; letter-spacing: 0.05em;
   }
 
-  .btn-resumen-ejecutivo {
+.btn-resumen-ejecutivo {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
     padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.08); /* Sutil para no distraer */
     color: #e2e8f0;
     border-radius: 9999px;
     font-size: 0.875rem;
@@ -181,14 +181,15 @@
     text-decoration: none;
     border: 1px dashed rgba(255, 255, 255, 0.3);
     transition: all 0.3s ease;
+    width: 100%; /* ESTO garantiza que llegue de borde a borde */
+    box-sizing: border-box;
 }
 
 .btn-resumen-ejecutivo:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.15);
     color: #ffffff;
     border-style: solid;
-    border-color: #ffffff;
-    transform: translateY(-1px);
+    border-color: rgba(255, 255, 255, 0.5);
 }
   
 </style>
@@ -240,9 +241,9 @@
         <div class="flex flex-wrap gap-3">
           <button id="btn-sumate" type="button" class="inline-flex items-center justify-center px-4 py-2.5 rounded-full bg-white text-cura-primary text-sm font-semibold shadow-sm hover:bg-cura-accentLight hover:text-cura-primaryDark transition cursor-pointer">QUIERO SUMARME</button>
           <button id="btn-info" type="button" class="inline-flex items-center justify-center px-4 py-2.5 rounded-full border border-cura-accent text-sm font-semibold text-cura-accentLight hover:bg-cura-accent hover:text-cura-primary transition">Obtén más información</button>
-       <a href="/Informacion/documentos/Resumen_Ejecutivo.pdf" class="btn-resumen-ejecutivo">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-        Ver Resumen Ejecutivo
+          <a href="/Informacion/documentos/Resumen_Ejecutivo.pdf" class="btn-resumen-ejecutivo w-full">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line></svg>
+        Resumen Ejecutivo
     </a>
         </div>
 
